mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/freeFunctions/free_receive.sol
receive() {}
// ----
// ParserError 7858: (0-7): Expected pragma, import directive or contract/interface/library/user-defined type/constant/function/error/event definition.
